--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "dependencies": {
     "@rescript/core": "^1.6.1",
     "rescript": "^11.1.4",
-    "tree-sitter": "0.21.1",
-    "tree-sitter-javascript": "0.23.1",
-    "tree-sitter-python": "0.23.4"
+    "tree-sitter-wasms": "^0.1.12",
+    "web-tree-sitter": "^0.24.7"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
